--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -16,6 +16,31 @@
 		table {
 			width:100%;
 		}
+		.bar-container {
+		  width: 60%;
+		  background-color: #e7e5f3;
+		  margin-bottom: 15px;
+		  margin-left: 5%;			  
+		}
+
+		.skills {
+		  text-align: left;
+		  height:30px;
+		  color: white;
+		  padding-top:7px;
+		  padding-left: 10px;
+		  font-weight: bold;
+		}
+
+		.bar {
+			background-color: #2e819c;
+		    border-left: 10px solid yellow;
+		}
+
+		.skills:hover {
+			box-shadow: 7px 13px 17px -10px rgba(0,0,0,0.75);
+		}
+
 </style>
 </head>
 <body>
@@ -23,6 +48,13 @@
 	<h1><b>Trending on Github</b></h1>
 	<p>Languages that are trending the most since last month</p>
 </div>
+{% for i in data %}
+<div class="bar-container">
+  <div class="skills bar" style="width: {{i.percentage-share|multiply:3}}%;">{{i.name}}</div>
+</div>
+{% endfor %}
+<p class="font-italic" style = "margin-left: 5%; font-size: 14px;">Percentage share of number of repositories created per language in the last month. Percentage share amplified for display purposes</p>
+
 <div class="container">
 	<div class="row">		
 		<table class="table text-center">
